fixed spacing between boxes in the home page

--- a/styles.css
+++ b/styles.css
@@ -106,7 +106,7 @@ main{
 .main-box{
     display: flex;
     flex-direction: column;
-    width: 70%;
+    width: 60%;
 }
 .main-box .top{
     display: flex;
